# mcp-client-cli

./: .cursorrule  .env.template  .gitignore  .repomixignore  CONFIG.md  README.md  brave_search_client.py  c4_diagram.puml  llm.py  mcp-server-config-example.json  pyproject.toml  repro_github.py  simple_client.py
.github/workflows/: release.yml  test.yml
src/mcp_client_cli/: __init__.py  agent.py  cli.py  config.py  const.py  input.py  memory.py  output.py  prompt.py  storage.py  tool.py  transport.py
tests/: debug_reasoning_structure.py  test_reasoning.py
